k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: komunalka-service
spec:
  selector:
    app: komunalka
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
